# Naukowy-Python

./: Histogram.py  cierpienia-mlodego-wertera.txt
Dekorator/: Decorum.py
Histogram/: Histogram.py  cierpienia-mlodego-wertera.txt  pyproject.toml
Scraping Statyczny/: John Christopher Depp II.json  Scraper.py  pyproject.toml
